1.更新 DevFinal 常量使用代码
Former-commit-id: 094c33f0e9440423e292c7ee64ccc3e0185a51f1
Former-commit-id: dd6ea7e523b5e39ce0d4fa6b1251d21e9395d5dd